argocd/manifests/jobsync/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jobsync
  namespace: jobsync
spec:
  selector:
    app: jobsync
  ports:
    - name: http
      port: 3000
      targetPort: 3000
